# exam-pdf-parser

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_crop.py  test_debug_blocks.py
docs/: PROGRESS_REPORT.md
scripts/: batch_parser.py  benchmark.py  full_flow.py  run_comparison.py  validate.py
src/: __init__.py  auth.py  cli.py  config.py  evaluator.py  explainer.py  parser.py  pdf_parser.py  prompt.py  rate_limit.py  schema.py  server.py  validator.py
src/cropper/: __init__.py  cropper.py  detector.py  explainer.py
src/models/: __init__.py  _utils.py  base.py  hybrid_client.py  llm_backend.py
src/ocr/: __init__.py  base.py  deepseek_ocr.py  docling_ocr.py  easyocr_ocr.py  marker_ocr.py  mineru_ocr.py  paddleocr_ocr.py  pymupdf_ocr.py  surya_ocr.py  tesseract_ocr.py  trocr_ocr.py
src/static/: index.html
test/: answer.md
